--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Boffinbox/YelpCamp#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.2",
     "cloudinary": "^1.37.3",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
